--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,15 @@
 
     <dependencies>
         <!-- Start:WEB -->
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
 
         <!-- jsp template engine -->
         <dependency>
